syntax = "proto3";
package ticket3;

option java_package = "com.proto.ticket3";
option java_multiple_files = true;

message TicketRequest {
  int64 id = 1;
}

message TicketResponse {
  string name = 1;
  int64 age = 2;
}

service TicketService {
  rpc getAgent(TicketRequest) returns(TicketResponse);
}